Fix maybe flaky SnapshotClientITest#shouldBeAbleToSaveAndRestoreSnapshot
Increase max wait times for service to exist and not exist from
500 ms to 1 second.

Increase the time for the service to exist after snapshot restoration
from 5 to 30 seconds and use the tighter 25 ms poll duration.

Also, while waiting for the service after snapshot restore, ignore
any exception that might occur.

Also, replace the deprecated URL constructor with
URI.create(...).toURL()